@@ -1,4 +1,9 @@
+* 2012-05-08 - thorben.betten@open-xchange.com
+
+ - Fix for bug 21766: Fixed parsing of IMAP STATUS response if folder full name contains an opening parenthesis
+
 * 2012-05-07 - tobias.friedrich@open-xchange.com
+
  - Fix for bug 22094: Use original folder ID when applying patches during move operations
  
 * 2012-05-04 - martin.herfurth@open-xchange.com
